# mcp_daemon_engine

./: .gitignore  README.md  mcp_daemon_engine_postman_collection.json  pyproject.toml
docs/: DEVELOPMENT_PLAN.md  DUAL_BACKEND_CONFIG.md  DUAL_BACKEND_DEVELOPMENT_PLAN.md  EXTERNAL_MCP_PROXY_DEV_PLAN.md  MCP_PACKAGE_UPLOAD_SPEC.md  PHASE0_ENTITY_INVENTORY.md  POSTGRESQL_SETUP.md  gateway_restructure_plan.md
mcp_daemon_engine/: __init__.py  main.py  schema.py
mcp_daemon_engine/handlers/: auth_router.py  config.py  external_mcp_proxy.py  jwt_cognito.py  jwt_local.py  mcp_app.py  mcp_core.py  mcp_external.py  mcp_handlers.py  mcp_server.py  mcp_utility.py  middleware.py  schema.py  sse_manager.py
mcp_daemon_engine/migration/alembic/: env.py
mcp_daemon_engine/models/: cache.py  mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py
mcp_daemon_engine/models/dynamodb/: __init__.py  cache.py  mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py  utils.py
mcp_daemon_engine/models/postgresql/: __init__.py  base.py  mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py  utils.py
mcp_daemon_engine/models/repositories/: base.py  dispatch.py
mcp_daemon_engine/models/repositories/dynamodb/: __init__.py  _base.py  (+4 more)
mcp_daemon_engine/mutations/: mcp_configuration.py  mcp_external.py  mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py  mcp_upload.py
mcp_daemon_engine/queries/: mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py
mcp_daemon_engine/types/: mcp_configuration_stats.py  mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py
mcp_daemon_engine/utils/: exceptions.py  normalization.py
migration/: alembic.ini
migration/alembic/versions/: 0001_create_mcp_functions.py  0002_create_mcp_modules.py  0003_create_mcp_settings.py  0004_create_mcp_function_calls.py  0005_add_status_to_mcp_functions.py
(+6 files in other folders)
