[project]
name = "mcp-daemon-engine"
version = "0.0.1"
description = "MCP daemon business logic with gateway dispatch entry points"
authors = [{name = "Idea Bosque"}]
dependencies = [
  "mcp",
  "python-jose[cryptography]",
  "httpx[http2]",
  "bcrypt",
  "passlib[bcrypt]",
  "graphene",
  "python-dotenv",
  "pendulum",
  "SilvaEngine-DynamoDB-Base",
  "SilvaEngine-Utility",
  "mcp-http-client",
  "aiohttp",
]

[project.optional-dependencies]
dev = [
  "ruff",
]
postgresql = [
  "SQLAlchemy>=1.4",
  "psycopg2-binary>=2.9",
  "alembic>=1.10",
]

[tool.pytest.ini_options]
# Only collect this package's own tests. tests/tmp/ holds extracted package
# artifacts staged by manual processMcpPackage runs (gitignored) and must not
# be discovered as tests.
testpaths = ["mcp_daemon_engine/tests"]
norecursedirs = ["tmp", ".git", "build", "*.egg-info", ".ruff_cache", "__pycache__"]

[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportArgumentType = "none"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"
